--- a/assets/views/dashboard.html
+++ b/assets/views/dashboard.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <br>
-<!-- Cards -->
+<!-- Cards 
 <div class="grid grid-cols-12 gap-6">
     <div class="col-span-12 md:col-span-1 bg-white p-4 rounded-lg border">
         <p class="text-gray-500">Customers</p>
@@ -38,7 +38,7 @@
     </div>
 </div>
 <br>
-<!-- Charts -->
+
 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div class="bg-white p-4 rounded-lg border">
         <h4 class="font-semibold mb-2">Monthly Sales</h4>
@@ -49,6 +49,7 @@
         <canvas id="lineChart"></canvas>
     </div>
 </div>
+-->
 
 <style>
     input{
