--- a/assets/views/detalle-articulo-costes.html
+++ b/assets/views/detalle-articulo-costes.html
@@ -15,6 +15,10 @@
                 <label class="block text-sm font-medium">Precio actual €/kg </label>
                 <input class="w-full border px-2 py-1 rounded" id="currentPrice" disabled />
             </div>
+            <div>
+                <label class="block text-sm font-medium">Precio fin mes €/kg </label>
+                <input class="w-full border px-2 py-1 rounded" id="currentEndMont" disabled />
+            </div>
             <br>
             <ul class="suggestions" id="suggestionsList2"></ul>
         </div>
@@ -37,7 +41,7 @@
                     <tr>
                         <th class="px-2 py-1 text-left">Ingredientes</th>
                         <th class="px-2 py-1 text-left">Resumen</th>
-                        <th class="px-2 py-1 text-left">%</th>
+                        <th class="px-2 py-1 text-left">% Calculo precio actual</th>
                     </tr>
                 </thead>
                 <tbody id="desglosePrecios">
