--- a/assets/views/bloqueos.html
+++ b/assets/views/bloqueos.html
@@ -9,11 +9,12 @@
             <thead>
                 <tr class="twcolor">
                     <th>Almacén</th>
-                    <th>Artículo</th>
+                    <th>Situación</th>
+                    <th>Cód._Entrada</th>
                     <th>Lote</th>
-                    <th>Cantidad</th>
-                    <th>Tipo</th>
-                    <th>Proveedor</th>
+                    <th>Descripción</th>
+                    <th>Kg</th>
+                    <th>Palet</th>
                     <th>Observaciones</th>
                 </tr>
             </thead>
