--- a/assets/views/bloqueos.html
+++ b/assets/views/bloqueos.html
@@ -8,14 +8,14 @@
         <table class="w-full table-auto border border-gray-300 text-sm">
             <thead>
                 <tr class="twcolor">
-                    <th>Almacén</th>
+                    <th class="topLeft">Almacén</th>
                     <th>Situación</th>
                     <th>Cód._Entrada</th>
                     <th>Lote</th>
                     <th>Descripción</th>
                     <th>Kg</th>
                     <th>Palet</th>
-                    <th>Observaciones</th>
+                    <th class="topRight">Observaciones</th>
                 </tr>
             </thead>
             <tbody id="blockTable"></tbody>
