--- a/assets/views/detalle-grupo-equivalente.html
+++ b/assets/views/detalle-grupo-equivalente.html
@@ -23,7 +23,7 @@
             <div id="listadoLineas">
 
             </div>
-            <button class="text-white px-2 mt-4 rounded twcolor" onclick="addNewArticuleGr()">+ Nuevo artículo</button>
+            <button class="text-white px-2 mt-4 rounded twcolor" onclick="addNewArticuleGr()">+ Nuevo equivalente</button>
         </div>
     </div>
 
