--- a/assets/views/detalle-articulo-costes.html
+++ b/assets/views/detalle-articulo-costes.html
@@ -12,11 +12,11 @@
                 <input class="w-full border px-2 py-1 rounded" id="descripcionCodeId" disabled />
             </div>
             <div>
-                <label class="block text-sm font-medium">Precio actual €/kg </label>
+                <label class="block text-sm font-medium">Precio actual €/kg sin gastos prod.</label>
                 <input class="w-full border px-2 py-1 rounded" id="currentPrice" disabled />
             </div>
             <div>
-                <label class="block text-sm font-medium">Precio fin mes €/kg</label>
+                <label class="block text-sm font-medium">Precio fin mes €/kg sin gastos prod.</label>
                 <input class="w-full border px-2 py-1 rounded" id="currentEndMont" disabled />
             </div>
             <br>
