--- a/assets/views/detalle-grupo-equivalente.html
+++ b/assets/views/detalle-grupo-equivalente.html
@@ -19,8 +19,8 @@
             <ul class="suggestions" id="suggestionsList2"></ul>
         </div>
         <div class="col-span-12 md:col-span-8 space-y-4 border border-gray-300 p-4 shadow-sm">
-            <h2 class="text-lg font-semibold" id="perSpan"></h2>
-            <div id="listadoLineas">
+            <h2 class="text-lg font-semibold">Listado artículos equivalentes</h2>
+            <div id="listadoLinEquiv">
 
             </div>
             <button class="text-white px-2 mt-4 rounded twcolor" onclick="addNewArticuleGr()">+ Nuevo equivalente</button>
