--- a/assets/views/equivalentes-con-contenedor.html
+++ b/assets/views/equivalentes-con-contenedor.html
@@ -16,18 +16,10 @@
     <span></span>
 </div>
 <div id="tablPriceEquiCon" class="flex flex-col gap-2 text-sm w-full rounded-md">
-    <div class="bg-white p-2 border ">Contenido aquí</div>
+    <div class="bg-white p-2 border ">Contenido aquí A</div>
 </div>
 <br>
 <br>
-<br>
-<div class="w-full mx-auto mb-4 flex justify-between items-center">
-    <span></span>
-    <h1 id="titleEquivPage" class="text-xl text-center">Previsión de precios y stock de artículos equivalentes (entradas SIN contenedores)</h1>
-    <span></span>
+<div id="tableStructureA" class="flex flex-col gap-2 text-sm w-full rounded-md">
+    <div class="bg-white p-2 border ">Contenido aquí B</div>
 </div>
-<div id="tablPriceEquiSin" class="flex flex-col gap-2 text-sm w-full rounded-md">
-    <div class="bg-white p-2 border ">Contenido aquí</div>
-</div>
-
-
