--- a/assets/views/equivalentes-con-contenedor.html
+++ b/assets/views/equivalentes-con-contenedor.html
@@ -19,6 +19,7 @@
     <div class="bg-white p-2 border ">Contenido aquí A</div>
 </div>
 <br>
+<a href="https://app.powerbi.com/groups/5ca33a6c-47de-4dc4-aa3f-7058e9536e8d/reports/e32cede0-1ec8-4ab5-9bd0-c029a1577d16/87ac4f22bfbdea14b6b0?experience=power-bi" target="_blank">📊 Power BI</a>
 <br>
 <div id="tableStructureA" class="flex flex-col gap-2 text-sm w-full rounded-md">
     <div class="bg-white p-2 border ">Contenido aquí B</div>
