--- a/assets/views/expedientes-albaranes-facturas.html
+++ b/assets/views/expedientes-albaranes-facturas.html
@@ -4,5 +4,5 @@
     <input type="button" value=">" class="bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-0 px-2 rounded mx-2" onclick="addYearFunc(1)">
 </div>
 <div id="expedientes_content" class="flex flex-col gap-2 text-sm w-full">
-    <div class="bg-white p-2 border">Contenido aquí</div>
+    <div class="bg-white p-2 border">Cargando el contenido..</div>
 </div>
