--- a/assets/views/proyeccion-costes-con-contenedor.html
+++ b/assets/views/proyeccion-costes-con-contenedor.html
@@ -29,6 +29,6 @@
     <span> </span> <span> </span> <span> </span>
 </div>
 <div id="costes_art_content" class="flex flex-col gap-2 text-sm w-full rounded-md">
-    <div class="bg-white p-2 border ">Contenido aquí</div>
+    <div class="bg-white p-2 border ">Cargando el contenido..</div>
 </div>
 
