--- a/assets/views/equivalentes-con-contenedor.html
+++ b/assets/views/equivalentes-con-contenedor.html
@@ -16,10 +16,10 @@
     <span></span>
 </div>
 <div id="tablPriceEquiCon" class="flex flex-col gap-2 text-sm w-full rounded-md">
-    <div class="bg-white p-2 border ">Contenido aquí A</div>
+    <div class="bg-white p-2 border ">Cargando el contenido A..</div>
 </div>
 <br>
 <br>
 <div id="tableStructureA" class="flex flex-col gap-2 text-sm w-full rounded-md">
-    <div class="bg-white p-2 border ">Contenido aquí B</div>
+    <div class="bg-white p-2 border ">Cargando el contenido B..</div>
 </div>
