--- a/assets/views/logistica-listado-cargas.html
+++ b/assets/views/logistica-listado-cargas.html
@@ -9,6 +9,7 @@
             <thead>
                 <tr class="twcolor">
                     <th class="topLeft">Id</th>
+                    <th>Nombre camión</th>
                     <th>Semana</th>
                     <th>Fecha</th>
                     <th class="topRight">Paletas</th>
