--- a/assets/views/logistica-viaje-detalle.html
+++ b/assets/views/logistica-viaje-detalle.html
@@ -16,7 +16,7 @@
                     <th>Cantidad</th>
                     <th>Presentación</th>
                     <th>Kg</th>
-                    <th class="topRight"></th>
+                    <th class="topRight">Cajas Calc.</th>
                 </tr>
             </thead>
             <tbody id="blockTravelDetail"></tbody>
