--- a/assets/views/logistica-listado-viajes.html
+++ b/assets/views/logistica-listado-viajes.html
@@ -4,8 +4,8 @@
     <span></span>
 </div>
 <div class="flex flex-col gap-2 text-sm w-full">
-    <div style="overflow-x: auto; width: 100%;">
-        <table class="w-full table-auto border border-gray-300 text-sm">
+    <div>
+        <table class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr class="twcolor">
                     <th class="topLeft">Nombre camión</th>
