--- a/assets/views/logistica-listado-cargas.html
+++ b/assets/views/logistica-listado-cargas.html
@@ -12,10 +12,11 @@
                     <th>Nombre camión</th>
                     <th>Semana</th>
                     <th>Fecha</th>
-                    <th class="topRight">Paletas</th>
+                    <th>Pal. Orient.</th>
+                    <th class="topRight">Pal. Input</th>
                 </tr>
             </thead>
-            <tbody id="blockLogistics"></tbody>
+            <tbody id="list22Loads"></tbody>
         </table>
     </div>
 </div>
