--- a/assets/views/logistica-listado-viajes.html
+++ b/assets/views/logistica-listado-viajes.html
@@ -9,17 +9,19 @@
             <thead>
                 <tr class="twcolor">
                     <th class="topLeft">Nombre camión</th>
-                    <th>Cliente</th>
+                    <th class="topLeft">Cliente</th>
                     <th>Pedido</th>
-                    <th>Albaran</th>
                     <th>Artículo</th>
                     <th>Cantidad</th>
-                    <th>Presentación</th>
+                    <th>Pres.</th>
                     <th>Kg</th>
-                    <th class="topRight">Cajas Calc.</th>
+                    <th>Caj. Calc.</th>
+                    <th>Pal. Orient.</th>
+                    <th class="topRight">Pal. Input</th>
                 </tr>
             </thead>
-            <tbody id="blockTravel"></tbody>
+            <tbody id="loadData"></tbody>
         </table>
     </div>
 </div>
+
