--- a/assets/views/logistica-viaje-detalle.html
+++ b/assets/views/logistica-viaje-detalle.html
@@ -1,25 +1,27 @@
 <div class="w-full mx-auto mb-4 flex justify-between items-center">
     <span></span>
-    <h1 class="text-xl text-center" id="pageTitle">Listado de pedidos viaje </h1>
+    <h1 class="text-xl text-center" id="pageTitle"></h1>
     <span></span>
 </div>
+
 <div class="flex flex-col gap-2 text-sm w-full">
     <div>
         <table  class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft">Nombre camión</th>
-                    <th>Cliente</th>
+                    <th class="topLeft">Cliente</th>
                     <th>Pedido</th>
-                    <th>Albaran</th>
                     <th>Artículo</th>
                     <th>Cantidad</th>
-                    <th>Presentación</th>
+                    <th>Pres.</th>
                     <th>Kg</th>
-                    <th class="topRight">Cajas Calc.</th>
+                    <th>Caj. Calc.</th>
+                    <th>Pal. Orient.</th>
+                    <th class="topRight">Pal. Input</th>
                 </tr>
             </thead>
-            <tbody id="blockTravelDetail"></tbody>
+            <tbody id="logisticsDetails"></tbody>
         </table>
     </div>
 </div>
+
