--- a/assets/views/logistica-viaje-detalle.html
+++ b/assets/views/logistica-viaje-detalle.html
@@ -17,7 +17,8 @@
                     <th>Kg</th>
                     <th>Caj. Calc.</th>
                     <th>Pal. Orient.</th>
-                    <th class="topRight">Pal. Input</th>
+                    <th>Pal. Input</th>
+                    <th class="topRight"></th>
                 </tr>
             </thead>
             <tbody id="logisticsDetails"></tbody>
