--- a/assets/views/compras-llegadas-contenedores.html
+++ b/assets/views/compras-llegadas-contenedores.html
@@ -13,21 +13,19 @@
         <table class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft">Código</th>
-                    <th>Artículo</th>
-                    <th>C.Ban</th>
-                    <th>Cont</th>
+                    <th class="topLeft">Artículo</th>
+                    <th>Cont.</th>
                     <th>Kg</th>
                     <th>Precio</th>
-                    <th>Importe</th>
                     <th>Cambio</th>
                     <th>Coste c/g</th>
+                    <th>Doc.</th>
                     <th>Origen</th>
+                    <th>Embarque</th>
                     <th>Llegada</th>
                     <th>Puerto</th>
                     <th>Proveedor</th>
                     <th>Cont.Prov</th>
-                    <th>Contr</th>
                     <th class="topRight">Exp</th>
                 </tr>
             </thead>
