--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,9 +166,12 @@ li:hover{
 .input-ca-ba{
     width: 322px;
 }
+.input-ca-ccl{
+    width: 202px;
+}
 #chart_div_dc {
     width: 100%;
-    height: 222px;
+    height: 300px;
 }
 .small-letter{
     font-size: 11px;
