--- a/assets/views/consulta-caracteristicas-lote.html
+++ b/assets/views/consulta-caracteristicas-lote.html
@@ -29,7 +29,7 @@
         <table class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr>
-                    <th class="topLeft">Palet</th>
+                    <th class="topLeft">Paleta</th>
                     <th>Artículo</th>
                     <th>Lote int</th>
                     <th>Método de producción</th>
