--- a/assets/views/consulta-caracteristicas-lote.html
+++ b/assets/views/consulta-caracteristicas-lote.html
@@ -36,12 +36,8 @@
                     <th>FAO</th>
                     <th>Arte de pesca</th>
                     <th>Origen</th>
-                    <!-- <th>5</th>
-                    <th>6</th> 
                     <th>Código / Especie</th>
-                    <th>8</th>
-                    <th>9</th> -->
-                    <th class="topRight">Código / Especie</th>
+                    <th class="topRight">Fecha congelación</th>
                 </tr>
             </thead>
             <tbody id="palArtBody">
