--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,3 +199,29 @@ b{
     border: 1px solid #4f46e5!important;
     text-align: center!important;
 }
+
+
+
+* {
+  scrollbar-width: thin;                     /* fino */
+  scrollbar-color: #4F46E5 transparent;      /* color del thumb y fondo */
+}
+
+/* WebKit (Chrome, Safari, Edge) */
+*::-webkit-scrollbar {
+  width: 6px;    /* grosor vertical */
+  height: 6px;   /* grosor horizontal */
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent; /* fondo del track */
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #4F46E5; /* color del thumb */
+  border-radius: 9999px;     /* redondeado */
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #051268; /* tono un poco más oscuro al pasar el mouse */
+}
