--- a/assets/views/almacen-importacion-vs-resto.html
+++ b/assets/views/almacen-importacion-vs-resto.html
@@ -1,7 +1,10 @@
 <div class="w-full mx-auto mb-4 flex justify-between items-center">
-    <span></span>
+    <span>
+      <input type="text" value="" class="input-ca input-ca-ba" placeholder="Buscar.." id="searchAlmVal" oninput="changeSearchedAlmVal(event)">
+      <span  class="b-top-page" onclick="cleanAlmValSearch()"> 🧹 </span>
+    </span>
     <h1 class="text-xl text-center">Comparación de albaranes de almacén 98 contra almacenes (00, 01, 02, E01, E02, E03, E04, E05) y 25</h1>
-    <span></span>
+    <span> </span><span> </span><span> </span><span> </span>
 </div>
 <div class="flex flex-col gap-2 text-sm w-full">
     <div>
