--- a/assets/views/almacen-importacion-vs-resto.html
+++ b/assets/views/almacen-importacion-vs-resto.html
@@ -19,7 +19,7 @@
                     <th>Prov. 98</th>
 
                     <th>D. Int. Alm.</th>
-                    <th>€ Int.</th>
+                    <th>€ Entr.</th>
                     <th>Prov.</th>
 
                     <th>D. Int. Gast.</th>
