--- a/assets/views/compras-stock.html
+++ b/assets/views/compras-stock.html
@@ -8,6 +8,10 @@
     <span><select id="selectSubFamCS" onchange="chagedSubFamilyCS(event)"><option value="" selected>SUBFAMILIAS</option></select></span>
     <span></span><span></span><span></span><span></span>
 </div>
+<div id="listCheskBoxAlmecenes">
+    Almacenes:
+</div>
+<br>
 <div class="flex flex-col gap-2 text-sm w-full">
     <div>
         <table class="w-ful styled-table-fh stycky-table">
