--- a/assets/views/compras-stock.html
+++ b/assets/views/compras-stock.html
@@ -78,7 +78,13 @@
 <br>
 <br>
 <div>
-    <div class="bg-white p-2 border ">Informe de stock actual sin familias '001 AUXILIARES','006 EMBALAJES ','007 HELADOS','011 PAN Y REPOSTERÍA','013 PRODUCTOS AJENOS','015 VARIOS', '016 VERDURAS ','017 GRÁNELES Y VARIOS'.
+    <div class="bg-white p-2 border ">Informe de stock actual con filtros aplicados: <br>
+        1. Stock en situación DISPG <br>
+        2. Familias excluidas: 001 AUXILIARES, 015 VARIOS, 016 VERDURAS, 017 GRANELES Y VARIOS. <br>
+        3. Mercado: 10 NACIONAL, 30 COMPARTIDO. <br>
+        4. Tipo material: 010 MATERIA PRIMA, 030 PRODUCTO FABRICADO, 040 PRODUCTO COMERCIAL. <br>
+
+        <br>
         <br>
             €/Kg PMP - precio medio ponderado en libra
         <br>
