--- a/assets/views/almacen-importacion-vs-resto.html
+++ b/assets/views/almacen-importacion-vs-resto.html
@@ -3,8 +3,10 @@
       <input type="text" value="" class="input-ca input-ca-ba" placeholder="Buscar.." id="searchAlmVal" oninput="changeSearchedAlmVal(event)">
       <span  class="b-top-page" onclick="cleanAlmValSearch()"> 🧹 </span>
     </span>
-    <h1 class="text-xl text-center">Comparación de albaranes de almacén 98 contra almacenes (00, 01, 02, E01, E02, E03, E04, E05, E06) y 25</h1>
-    <span>Desde</span><span><input type="date" id="inputDateAIVS" onchange="changedDateAIVS()"></span><span> </span><span> </span>
+    <h1 class="text-xl text-center">Comparación de albaranes</h1>
+    <span>Desde</span><span><input type="date" id="inputDateAIVS" onchange="changedDateAIVS()"></span>
+    <span>Hasta</span><span><input type="date" id="inputDateHastaAIVS" onchange="changedDateHastaAIVS()"></span>
+    <span> </span> <span> </span> <span> </span>
 </div>
 <div class="flex flex-col gap-2 text-sm w-full">
     <div>
