--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,6 @@
 }
 
 body {
-    font-family:  'Outfit', sans-serif, monospace;
     font-size: 15px;
     color: black
 }
@@ -83,8 +82,8 @@ td, th, tr{
 }
 *{
     margin: 0; padding: 0;
-     font-family: Consolas, sans-serif;
-      font-size: 13px; font-weight: 500; 
+    font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "Monaco", "Ubuntu Mono", "Bitstream Vera Sans Mono", "DejaVu Sans Mono", "Source Code Pro", monospace;
+    font-size: 13px; font-weight: 500; 
 }
 .b-top-page{
     margin-left: 11px;
