--- a/assets/views/finanzas-albaran-vs-factura.html
+++ b/assets/views/finanzas-albaran-vs-factura.html
@@ -11,7 +11,7 @@
         <table class="w-ful styled-table-fh stycky-table">
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft">Cambio mes</th>
+                    <th class="topLeft">C/Mes fecha alb.</th>
                     <th>Fecha alb.</th>
                     <th>Exp.</th>
                     <th>Num.</th>
@@ -24,7 +24,7 @@
                     <th>Fecha fac.</th>
                     <th>Num. fac.</th>
                     <th>$ fac.</th>
-                    <th>Cambio</th>
+                    <th>Cambio fac.</th>
                     <th>€ fac.</th>  
                     <th class="topRight">Diferencia</th>
                 </tr>
