--- a/assets/views/almacen-importacion-vs-resto.html
+++ b/assets/views/almacen-importacion-vs-resto.html
@@ -37,3 +37,15 @@
 <div id="divIVR" class="flex flex-col gap-2 text-sm w-full rounded-md">
     <div class="bg-white p-2 border ">Cargando el contenido..</div>
 </div>
+
+<div>
+    <br><br><br>
+    Comparación de albaranes 98 (tránsito e importaciones) contra los albaranes de entrada (alm. 00, 01, etc.) más los gastos albaranes de almacén 25.<br>
+    Columnas: <br> 
+    Fecha albarán 98, <br>
+    Documento exterior (expediente), <br>
+    Documento interior albaran 98,  <br>
+    <b>€ 98 - se calcula desde el precio del albarán en $ por el cambio del mes (correspondiente a la fecha del albarán)</b>, <br>
+    € Ent.+ Gast. - suma del albarán de entrada stock físico (00, 01, 02 y etc.) más los gastos de almacén 25. <br>
+
+</div>
