--- a/assets/views/almacen-importacion-vs-resto.html
+++ b/assets/views/almacen-importacion-vs-resto.html
@@ -40,12 +40,12 @@
 
 <div>
     <br><br><br>
-    Comparación de albaranes 98 (tránsito e importaciones) contra los albaranes de entrada (alm. 00, 01, etc.) más los gastos albaranes de almacén 25.<br>
+    Comparación de albaránes 98 (tránsito e importaciones) contra los albaránes de entrada (alm. 00, 01, etc.) más los gastos de albaránes almacén 25.<br>
     Columnas: <br> 
     Fecha albarán 98, <br>
     Documento exterior (expediente), <br>
-    Documento interior albaran 98,  <br>
-    <b>€ 98 - se calcula desde el precio del albarán en $ por el cambio del mes (correspondiente a la fecha del albarán)</b>, <br>
+    Documento interior albarán 98,  <br>
+    € 98 - importe  € del albarán, <br>
     € Ent.+ Gast. - suma del albarán de entrada stock físico (00, 01, 02 y etc.) más los gastos de almacén 25. <br>
 
 </div>
