--- a/assets/views/finanzas-albaran-vs-factura.html
+++ b/assets/views/finanzas-albaran-vs-factura.html
@@ -35,3 +35,11 @@
         </table>
     </div>
 </div>
+
+<br><br>
+<div>
+    Comparación de albarán facturado del almacén 98 y la factura correspondiente, <br>
+    desde el punto de vista de la factura, que puede tener varios albaranes facturados más albaranes de ajustes contables.<br>
+    <br>
+    Los datos se traen tal y como están en libra.
+</div>
