--- a/assets/views/compras-stock.html
+++ b/assets/views/compras-stock.html
@@ -49,37 +49,9 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <div>
     <div class="bg-white p-2 border ">Informe de stock actual con filtros aplicados: <br>
-        1. Stock en situación DISPG<br>
+        1. Stock en situación DISPG para DISPONIBLE GENERAL, DEPA para DEPÓSITO ADUANERO, FINAL para DESTINO FINAL (CONTINGENTE).<br>
         2. Familias excluidas: 001 AUXILIARES, 017 GRANELES Y VARIOS. <br>
         3. Mercado: 10 NACIONAL, 30 COMPARTIDO. <br>
         4. Tipo material: 010 MATERIA PRIMA, 030 PRODUCTO FABRICADO, 040 PRODUCTO COMERCIAL. <br>
