--- a/assets/views/produccion-comparacion-costes-contabilidad.html
+++ b/assets/views/produccion-comparacion-costes-contabilidad.html
@@ -9,12 +9,16 @@
         <table>
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft padd7"> Suma de diferencias </th>
-                    <th class="topRight padd7"> Diferencia absoluta </th>
+                    <th class="topLeft padd7">OFs cerradas (sum. diferencias)</th>
+                    <th class="padd7">OFs cerradas (sum. diferencias absolutas)</th>
+                    <th class="padd7">Total (sum de diferencias)</th>
+                    <th class="topRight padd7">Total absoluto</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <td class="border px-2 py-1 text-center padd7" id="ofCerrdasSumaTotalPCCC">0,00</td>
+                    <td class="border px-2 py-1 text-center padd7" id="ofCerradassumaAbsolutaPCCC">0,00</td>
                     <td class="border px-2 py-1 text-center padd7" id="sumaTotalPCCC">0,00</td>
                     <td class="border px-2 py-1 text-center padd7" id="sumaAbsolutaPCCC">0,00</td>
                 </tr>
