--- a/assets/views/produccion-comparacion-costes-contabilidad.html
+++ b/assets/views/produccion-comparacion-costes-contabilidad.html
@@ -9,17 +9,20 @@
         <table>
             <thead>
                 <tr class="twcolor">
-                    <th class="topLeft padd7">OFs cerradas (sum. diferencias)</th>
-                    <th class="padd7">OFs cerradas (sum. diferencias absolutas)</th>
-                    <th class="padd7">Total (sum de diferencias)</th>
-                    <th class="topRight padd7">Total absoluto</th>
+                    <th class="topLeft padd7"</th>
+                    <th class="padd7">OF cerradas</th>
+                    <th class="topRight padd7">OF en curso</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <td class="border px-2 py-1 text-right padd7">Diferencia total</td>
                     <td class="border px-2 py-1 text-center padd7" id="ofCerrdasSumaTotalPCCC">0,00</td>
-                    <td class="border px-2 py-1 text-center padd7" id="ofCerradassumaAbsolutaPCCC">0,00</td>
                     <td class="border px-2 py-1 text-center padd7" id="sumaTotalPCCC">0,00</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1 text-right padd7">Diferencia total absoluta</td>
+                    <td class="border px-2 py-1 text-center padd7" id="ofCerradassumaAbsolutaPCCC">0,00</td>
                     <td class="border px-2 py-1 text-center padd7" id="sumaAbsolutaPCCC">0,00</td>
                 </tr>
             </tbody>
