--- a/assets/views/produccion-comparacion-costes-contabilidad.html
+++ b/assets/views/produccion-comparacion-costes-contabilidad.html
@@ -10,20 +10,20 @@
             <thead>
                 <tr class="twcolor">
                     <th class="topLeft padd7"</th>
-                    <th class="padd7">OF cerradas</th>
-                    <th class="topRight padd7">OF en curso</th>
+                    <th class="padd7">OFs en curso</th>
+                    <th class="padd7 topRight">OFs cerradas</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td class="border px-2 py-1 text-right padd7">Diferencia total</td>
+                    <td class="border px-2 py-1 text-center padd7" id="sumaTotalPCCC">0,00</td> 
                     <td class="border px-2 py-1 text-center padd7" id="ofCerrdasSumaTotalPCCC">0,00</td>
-                    <td class="border px-2 py-1 text-center padd7" id="sumaTotalPCCC">0,00</td>
                 </tr>
                 <tr>
                     <td class="border px-2 py-1 text-right padd7">Diferencia total absoluta</td>
-                    <td class="border px-2 py-1 text-center padd7" id="ofCerradassumaAbsolutaPCCC">0,00</td>
                     <td class="border px-2 py-1 text-center padd7" id="sumaAbsolutaPCCC">0,00</td>
+                    <td class="border px-2 py-1 text-center padd7" id="ofCerradassumaAbsolutaPCCC">0,00</td>
                 </tr>
             </tbody>
         </table>
