--- a/assets/views/calidad-evaluacion-proveedor.html
+++ b/assets/views/calidad-evaluacion-proveedor.html
@@ -23,7 +23,7 @@
             <th>Artículo</th>
             <th>Lote</th>
             <th>Kg</th>
-            <th class="topRight">Val.</th>
+            <th class="topRight">Nota</th>
           </tr>
         </thead>
         <tbody id="tableAllCEP"></tbody>
@@ -38,7 +38,7 @@
         <thead>
           <tr class="twcolor">
             <th class="topLeft">Nombre proveedor</th>
-            <th class="topRight">Val. media</th>
+            <th class="topRight">Nota media</th>
           </tr>
         </thead>
         <tbody id="tableProvCEP"></tbody>
