--- a/assets/views/dashboard.html
+++ b/assets/views/dashboard.html
@@ -13,6 +13,7 @@
         <h4 class="font-semibold mb-2">Recálculos</h4>
         <p>1. Cálculo de plazo de cobro de las facturas (diario, activado).</p>
         <p>2. Cálculo de costes en producción (diario, activado).</p>
+        <p>3. Cálculo preció estándar (mensual, activado).</p>
     </div>
 </div>
 <br>
